--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 This is libsolv, a free package dependency solver using a satisfiability
-algorihtm.
+algorithm.
 
 This code is based on two major, but independent, blocks:
 
